Add: vlucas/dotenv composer

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "cyanofc@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
