--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
         "psr-4": {
             "App\\": "src/"
         },
-	"files": {
+	"files": [
 	  "src/config.php"
-	}
+	]
     },
     "authors": [
         {
